[package]
name = "ddiff"
version = "0.1.0"
authors = ["biosan <alessandro@biondi.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version = "0.15", features = ["rayon"]}
blake3 = "0.3"
humansize = "1.1.0"
rayon = "1.5"
structopt = "0.3"
tabwriter = "1"
walkdir = "2"
