[package]
name = "ddiff"
version = "0.1.0"
authors = ["Alessandro Biondi (biosan) <alessandro@biondi.me>"]
edition = "2018"
license = "MIT"
description = "CLI utility to compare directories like a superhero"
readme = "README.md"
homepage = "https://github.com/biosan/dirdiff"
repository = "https://github.com/biosan/dirdiff"
keywords = ["cli", "compare", "folders", "hash", "blake3"]
categories = ["command-line-utilities"]
exclude = ["ci/**/*", "doc/**/*", ".**/*"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "ddiff"
path = "src/main.rs"

[dependencies]
indicatif = {version = "0.15", features = ["rayon"]}
blake3 = "0.3"
humansize = "1.1.0"
rayon = "1.5"
structopt = "0.3"
tabwriter = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
